--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Tracker"
         tools:targetApi="31">
         <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -22,9 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".ForgetPasswordActivity"/>
-        <activity android:name=".MainActivity"/>
-
+        <activity android:name=".ForgetPasswordActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
