--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Tracker"
         tools:targetApi="31">
         <activity
+            android:name=".ActivitySetting"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityFeedback"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
