--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +15,11 @@
         android:theme="@style/Theme.Tracker"
         tools:targetApi="31">
         <activity
-            android:name=".ActivitySetting"
+            android:name=".FeedbackActivity"
             android:exported="false" />
+
         <activity
-            android:name=".ActivityFeedback"
+            android:name=".ActivitySetting"
             android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
@@ -33,8 +36,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".BillInputActivity"/>
-
+        <activity android:name=".BillInputActivity" />
     </application>
 
 </manifest>
