--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,11 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tracker"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ModifyPasswordActivity"
+            android:exported="false"
+            android:label="@string/title_activity_modify_password"
+            android:theme="@style/Theme.Tracker" />
         <activity
             android:name=".FeedbackActivity"
             android:exported="false" />
-
         <activity
             android:name=".ActivitySetting"
             android:exported="false" />
@@ -26,7 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
