--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -14,6 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tracker"
         tools:targetApi="31">
+        <android: versionCode = "1"
+            android:versionName="1.0" />
         <activity
             android:name=".fragment.MainPageFragment"
             android:exported="false" />
