--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,39 +16,58 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tracker"
         tools:targetApi="31">
-        <android: versionCode = "1"
-            android:versionName="1.0" />
+
         <activity
-            android:name=".fragment.MainPageFragment"
-            android:exported="false" />
+            android:name=".MainActivity"
+            android:exported="true"> <!-- Set exported to true for launcher activities -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ModifyPasswordActivity"
             android:exported="false"
             android:label="@string/title_activity_modify_password"
             android:theme="@style/Theme.Tracker" />
+
         <activity
             android:name=".FeedbackActivity"
             android:exported="false" />
+
         <activity
             android:name=".ActivitySetting"
             android:exported="false" />
+
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
+
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
+            <!-- LoginActivity should not be a launcher activity -->
         </activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".ForgetPasswordActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".BillInputActivity" />
-        <activity android:name=".YearlyReportActivity" />
+
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ForgetPasswordActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".BillInputActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".YearlyReportActivity"
+            android:exported="false" />
+
+        <!-- Add other activities as needed -->
+
     </application>
 
 </manifest>
